src/css/code.editor.scss
/* ... */
.panel-heading .form-control {
    display: inline-block;
    margin: 0px;
}

.panel-heading {
    min-height: 60px;
}

.path-container {
    display: inline-block;
    position: absolute;
    top: 32px;
}

.path-container input {
    padding: 2px;
    height: auto;
}

.path-container {
    left: 4px;
    right: 4px;
}

.path-container .input-group {
    width: 100%;
    height: 26px;
}

.path-container .input-group button {
    height: 26px;
    padding-top: 6px;
}

.path-container .caret {
    margin-top: -9px;
}

#remoteBrowse .dialog-footer .bootstrap-select {
    margin: 0;
    padding: 0;
    height: 29px;
}

.dropdown-menu a.active2 {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9eceff+0,3399ff+100 */
    background: #3399ff;

    /* Old browsers */
    background: -moz-linear-gradient(top, #9eceff 0%, #3399ff 100%);

    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #9eceff 0%, #3399ff 100%);

    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #9eceff 0%, #3399ff 100%);

    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9eceff', endColorstr='#3399ff',GradientType=0 );

    /* IE6-9 */
    color: white;
}

.dropdown-menu > li > a.changed {
    background-color: rgb(218, 255, 181);
    border-top: 1px solid rgb(119, 168, 69);
    border-bottom: 1px solid rgb(119, 168, 69);
    opacity: 1;
    color: black;
    background-image: none;
}

.dropdown-menu > li > a.new {
    background-color: rgb(178, 226, 255);
    border-top: 1px solid rgb(94, 185, 242);
    border-bottom: 1px solid rgb(94, 185, 242);
    opacity: 1;
    color: black;
    background-image: none;
}

.dropdown-menu > li > a.new.active {
    background-color: rgb(178, 226, 255);
    border-top: 1px solid rgb(247, 216, 106);
    border-bottom: 1px solid rgb(247, 216, 106);
    background-image: none;
}

.dropdown-menu > li > a.active {
    background-color: rgb(249, 242, 217);
    border-top: 1px solid rgb(247, 216, 106);
    border-bottom: 1px solid rgb(247, 216, 106);
    background-image: none;
}

.dropdown-menu > li > a.active.changed {
    background-color: rgb(218, 255, 181);
    border-top: 1px solid rgb(247, 216, 106);
    border-bottom: 1px solid rgb(247, 216, 106);
    background-image: none;
}

.dropdown-menu > li > a:focus,
.dropdown-menu > li > a.new.active:hover,
.dropdown-menu > li > a.changed:hover,
.dropdown-menu > li > a.new:hover,
.dropdown-menu > li > a.active:hover,
.dropdown-menu > li > a.active.changed:hover {
    background-color: #e8e8e8;
    background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
    background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
    background-repeat: repeat-x;
}

.dropdown-menu > li > a.main, .property-grid-editor-flag-dropdown-item-group {
    font-weight: bold;
}

.dropdown-menu > li > a.sub {
    padding-left: 40px;
}

#remote-navigate {
    overflow: auto;
}

.edit-dropdown ul {
    overflow: auto;
}

.wizard-page {
    height: 100%;
    width: 100%;
    text-align: left;
    font-size: 12pt;
}

.wizard-page .bootstrap-select.form-control {
    height: 30px;
}

.wizard-page .control-label {
    width: 100%;
    margin-bottom: 0;
}

.wizard-body {
    position: absolute;
    bottom: 55px;
    padding: 5px;
    top: 32px;
    left: 0;
    right: 0;
}

.cell-unused-terrain {
    color: red;
    font-weight: bold;
}

/*
.resize-dialog .dialog-body button {
    width:48px;
    height:48px;
    font-size: 20px;
}

.resize-dialog .dialog-body td {
    padding: 2px;
}

.resize-dialog .dialog-body .form-group {
    padding: 2px;
    margin: 0px;
}
*/
/*
.line-error-content {
	background: rgb(255, 174, 173) !important;
}

.line-error-decoration {
	background: #A94442;
    width: 3px !important;
    margin-left:3px;
}

.line-error-decoration:hover {
	background: #A94442;
	width: 8px !important;
    margin-left:0px;
}

.line-warning-content {
	background: #DDDD00;
}

.line-warning-decoration {
	background: #DDDD00;
    width: 3px !important;
    margin-left:3px;
}

.line-warning-decoration:hover {
	background: #DDDD00;
	width: 8px !important;
    margin-left:0px;
}

.line-error-glyph:before {
    content: '\26D2' !important;
    color:red !important;
}

.line-warning-glyph:before {
    content: '\26A0';
    color:#DDDD00;
}
*/

.line-error-margin {
    background: url("./../../assets/editor/error.png") no-repeat !important;
    z-index: 1;
}

.line-warning-margin {
    background: url("./../../assets/editor/warning.png") no-repeat;
    z-index: 0;
}

.area-editor-properties {
    top: 26px;
    left: 0;
    bottom: 0;
    right: 0;
    position: absolute;
}

.area-editor-properties .tab-content {
    margin-left: 125px;
    background: white;
    height: 100%;
}

.area-editor-properties .tab-pane {
    height: 100%;
    position: relative;
    padding: 5px;
}

.area-editor-properties .datagrid {
    left: 5px;
    bottom: 5px;
    right: 5px;
    top: 32px;
}

.area-editor-properties > .nav-tabs {
    margin-right: 5px;
}

.monaco-editor-hover-content .hover-row p {
    /*padding-bottom: 15px;*/
}

.monaco-editor-hover-content .hover-row p:last-child {
    padding-bottom: 0;
}

